--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name">ESRC</string>
 
+    <string name="prompt_name">본인의 이름을 입력해주세요.</string>
+    <string name="prompt_school">Ex) 강남고등학교</string>
+    <string name="prompt_class">Ex) 3</string>
+    <string name="prompt_age">Ex) 18</string>
+    <string name="action_sign_in">회원 등록</string>
+    <string name="action_next_step">다음으로</string>
+    <string name="action_sign_in_short">Sign in</string>
+
     <!-- Main Activity -->
     <string name="main_facebox_text">
         Please look ahead without movement
